--- a/html/products.html
+++ b/html/products.html
@@ -153,7 +153,7 @@
         <div class="col-lg-8">
           <div class="row gx-5 row-cols-1 row-cols-md-2 align-items-stretch">
             <div class="col mb-5" 
-            ng-repeat="feature in ecogourmetFeatures track by $index">
+                 ng-repeat="feature in ecogourmetFeatures track by $index">
               <div class="d-flex flex-column align-items-center mb-3">
 
                 <!-- Ikon és Description -->
@@ -161,7 +161,8 @@
                   <div class="aspect-ratio me-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 p-3">
                       <i class="{{feature.icon}} fa-3x" 
-                      style="font-size: 3rem;"></i>
+                         style="font-size: 3rem;">
+                     </i>
                     </div>
                   </div>
 
