--- a/html/contact.html
+++ b/html/contact.html
@@ -70,8 +70,9 @@
 	<div class="container-fluid p-0">
 	  <div class="row g-3 " 
 	  	   ng-repeat="award in awards_achievements | limitTo: 5">
-		<div class="col-lg-6 order-lg-{{ $index % 2 === 0 ? 2 : 1 }} text-white showcase-img d-block mx-lg-auto img-fluid rounded-3" 
-			 style="background-image:url('./media/image/awards/award{{$index+1}}.jpeg');">
+		<div class="col-lg-6 order-lg-{{ $index % 2 === 0 ? 2 : 1 }} 
+								text-white showcase-img d-block mx-lg-auto img-fluid rounded-3" 
+			 	 style="background-image:url('./media/image/awards/award{{$index+1}}.jpeg');">
 		</div>
 		<div class="col-lg-6 order-lg-{{ $index % 2 === 0 ? 1 : 2 }} my-auto showcase-text">
 		  <h2 class="fw-bolder py-3">
