--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,7 @@
   </div>
 
 
-  <!-- Home title -->
+  <!-- EcoGourmet title -->
   <div class="home">
     <div class="backdrop-filter-element"></div>
     <div class="home-content">
@@ -17,7 +17,8 @@
         EcoGourmet
       </h1>
       <i ng-click="scrollTo('scroll')"
-         class="fa-solid fa-chevron-down fa-bounce cursor-pointer" 
+         class="fa-solid fa-chevron-down 
+                fa-bounce cursor-pointer" 
          style="font-size: larger;"></i>
     </div>
   </div>
@@ -37,6 +38,8 @@
                  ng-src="{{ aboutUsText.image }}"/>
           </div>
         </div>
+      <!-- Az 'order-lg-1' osztályt hozzáadjuk az elemhez, 
+           ha az az első elem a ciklusban és nem a második indexű elem. -->
         <div class="col-lg-6" 
              ng-class="{ 'order-lg-1': $first && $index !== 2 }">
           <div class="p-5">
@@ -52,7 +55,7 @@
     </div>
   </section>
 
-
+  
   <!-- Pricing cards -->
   <section class="bg-light py-5 hidden">
     <div class="container my-5">
@@ -75,7 +78,7 @@
                 </li>
                 <li class="mb-2">
                   <i class="bi bi-check text-primary"></i>
-                  {{ 'plan_desc_' + ($index + 1) | translate:lang.data }}
+                    {{ 'plan_desc_' + ($index + 1) | translate:lang.data }}
                 </li>
               </ul>
             </div>
@@ -85,20 +88,22 @@
           <button type="button" 
                   ui-sref="products" 
                   class="btn btn-primary px-4 me-md-2">
-          {{ 'nxt_str' | translate:lang.data }}
+                  {{ 'nxt_str' | translate:lang.data }}
         </button>
         </div>
         <h3 class="small col-lg-7">
-          {{('plans') | translate:lang.data}}
+            {{('plans') | translate:lang.data}}
         </h3>
       </div>
     </div>
   </section>
 
 
+<!-- Recipe Kedvcsináló -->
   <section class="hidden">
     <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="row flex-lg-row-reverse 
+                  align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
           <img ng-src="./media/image/about_us/hero_cooking.jpeg" 
                class="d-block mx-lg-auto img-fluid rounded-3" 
@@ -128,12 +133,15 @@
 
 
     <!-- Testimonials angularositot-->
-    <section class="testimonials text-center bg-light hidden py-5">
+    <section class="testimonials text-center 
+                    bg-light hidden py-5">
       <div class="container-fluid">
         <h2 class="mb-5 fw-bolder">
           {{ 'testimonial_title'| translate:lang.data }}
         </h2>
         <div class="row">
+          <!-- A testimonials.slice(0, 3) kizárólag 
+               az első három elemet jeleníti meg. -->
           <div class="col-lg-4" 
                ng-repeat="testimonial in testimonials.slice(0, 3)">
             <div class="testimonial-item mx-auto mb-5 mb-lg-0" 
