--- a/html/recipes.html
+++ b/html/recipes.html
@@ -1,5 +1,7 @@
   <!-- Video Section -->
-  <div class="Topvideo position-relative d-flex align-items-center justify-content-center">
+  <div class="Topvideo position-relative d-flex 
+              align-items-center 
+              justify-content-center">
 
     <!-- Video Overlay -->
     <div class="overlay"></div>
@@ -15,8 +17,9 @@
     </video>
 
     
-    <!-- Content Container -->
-    <div class="container p-5 bg-body mt-md-n6 top-60 bottom-60 rounded" 
+    <!-- Content Container for recipes text part -->
+    <div class="container p-5 bg-body mt-md-n6 
+                top-60 bottom-60 rounded" 
          style="opacity: 85%;">
 
       <!-- Content Row -->
@@ -63,7 +66,8 @@
 
   <!-- Recipe Section 1 (Croissant Sajtos Szendvics) -->
   <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 
+                align-items-center rounded-3 border shadow-lg">
 
       <!-- Left Column with Recipe Details -->
       <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -76,9 +80,11 @@
         </div>
         <div class="lc-block mb-3">
           <div>
+            <!-- Elkészítési leírás -->
             <p class="small">
               {{ 'crois_elk' | translate:lang.data}}
             </p>
+            <!-- Hozzávalók leírása -->
             <p>
               {{ 'crois_hozz' | translate:lang.data}}
             </p>
@@ -88,7 +94,6 @@
           </div>
         </div>
       </div>
-
 
       <!-- Right Column with Image -->
       <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
@@ -122,9 +127,14 @@
     <div class="container-fluid p-3">
 
       <!-- Recipe Cards Row -->
-      <div class="row row-cols-1 row-cols-md-3 g-3 justify-content-center">
+      <div class="row row-cols-1 
+                  row-cols-md-3 g-3 
+                  justify-content-center">
 
         <!-- Recipe Card for Each Item in Category 3 -->
+        <!-- Kiválogatja és megjeleníti az 3 olyan 
+             receptet a "recipes" tömbből, amely a 
+             "recipe_kategoria_3" kategóriába tartozik. -->
         <div class="col mb-4" 
              ng-repeat="recipe in recipes | 
                         filter:{kategoria: 'recipe_kategoria_3'} | 
@@ -147,13 +157,15 @@
               <h5 class="card-title fs-6">
                 {{recipe.nev | translate:lang.data}}
               </h5>
+              <!-- Hozzávalók leírása -->
               <p class="card-text small overflow-hidden" 
                  style="max-height: 80px;">
-                Hozzávalok: {{recipe.hozzavalok | translate:lang.data}}
+                {{recipe.hozzavalok | translate:lang.data}}
               </p>
+               <!-- Elkészítési leírás -->
               <p class="small overflow-hidden" 
                  style="max-height: 60px;">
-                Elkészítés: {{recipe.elkeszites | translate:lang.data}}
+                {{recipe.elkeszites | translate:lang.data}}
               </p>
             </div>
           </div>
@@ -165,7 +177,8 @@
 
   <!-- Category Title Section 3 -->
   <div class="py-5 text-center w-100" 
-       style="margin-top: 3rem; margin-bottom: 3rem;">
+       style="margin-top: 3rem; 
+              margin-bottom: 3rem;">
     <h1 class="display-1">
       {{ 'recipe_kategoria_3' | translate:lang.data}}
     </h1>
@@ -179,9 +192,15 @@
 
   <!-- Featured Recipe 1 -->
   <section>
+
     <!-- Container for Featured Recipe 1 -->
+        <!-- Kiválogatja és megjeleníti az első olyan 
+         receptet a "recipes" tömbből, amely a 
+         "recipe_kategoria_1" kategóriába tartozik. -->
     <div class="container py-6" 
-         ng-repeat="recipe in recipes | filter:{kategoria: 'recipe_kategoria_1'} | limitTo: 1">
+         ng-repeat="recipe in recipes 
+                  | filter:{kategoria: 'recipe_kategoria_1'} 
+                  | limitTo: 1">
 
       <!-- Row for Recipe Details and Image -->
       <div class="row align-items-center">
@@ -212,12 +231,15 @@
                 <i class="fa-solid fa-check"></i>
               </div>
               <div class="ms-3 align-self-center">
+                <!-- Elkészítési leírás -->
                 <p>
                   {{recipe.elkeszites | translate:lang.data}}
                 </p>
+                <!-- Hozzávalók leírása -->
                 <p>
                   {{recipe.hozzavalok | translate:lang.data}}
                 </p>
+                <!-- Főzési idő megjelenítése -->
                 <p>
                   {{recipe.fozesi_ido | translate:lang.data}} 
                   {{'perc1' | translate:lang.data}}
@@ -234,8 +256,13 @@
   <!-- Featured Recipe 2 -->
   <section>
     <!-- Container for Featured Recipe 2 -->
+    <!-- Kiválogatja és megjeleníti az első olyan 
+         receptet a "recipes" tömbből, amely a 
+         "recipe_kategoria_2" kategóriába tartozik. -->
     <div class="container py-6" 
-         ng-repeat="recipe in recipes | filter:{kategoria: 'recipe_kategoria_2'} | limitTo: 1">
+         ng-repeat="recipe in recipes 
+                  | filter:{kategoria: 'recipe_kategoria_2'} 
+                  | limitTo: 1">
 
       <!-- Row for Recipe Details and Image -->
       <div class="row align-items-center">
@@ -243,7 +270,8 @@
         <!-- Left Column with Image (Order Changed) -->
         <div class="col-md-7 mb-5 mb-md-0 order-md-2">
           <img ng-src="{{recipe.kep}}" 
-               class="card-img-top img-fluid aspect-ratio-item" 
+               class="card-img-top img-fluid 
+                      aspect-ratio-item" 
                alt="{{recipe.nev}}" 
                sizes="(max-width: 1080px) 100vw, 1080px" 
                height="768">
@@ -266,15 +294,18 @@
                 <i class="fa-solid fa-check"></i>
               </div>
               <div class="ms-3 align-self-center">
+                <!-- Elkészítési leírás -->
                 <p>
-                  {{recipe.elkeszites | translate:lang.data}}
-                </p>
+                 {{recipe.elkeszites | translate:lang.data}}
+               </p>
+                <!-- Hozzávalók leírása -->
                 <p>
-                  {{recipe.hozzavalok | translate:lang.data}}
-                </p>
-                <p>
-                  {{recipe.fozesi_ido | translate:lang.data}} 
-                  {{'perc1' | translate:lang.data}}
+                 {{recipe.hozzavalok | translate:lang.data}}
+               </p>
+                <!-- Főzési idő megjelenítése -->
+                <p> 
+                 {{recipe.fozesi_ido | translate:lang.data}} 
+                 {{'perc1' | translate:lang.data}}
               </div>
             </div>
           </div>
